...
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/route_name_towards_view"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#FFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/route_change_direction_view"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_white_24dp"
                android:foreground="?android:attr/selectableItemBackground"
...
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_map_white_24dp"
                tools:ignore="VectorDrawableCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/route_count_view"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
...
