...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_bus_yellow_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/real_number_stop_view"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
...
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/app_name" />

                <TextView
                    android:id="@+id/real_description_stop_view"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/real_number_stop_view"
                    app:layout_constraintTop_toBottomOf="@+id/real_number_stop_view"
                    tools:text="100" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/real_progress_bar_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/frame_bottom"
                android:visibility="gone">

                <ProgressBar
...
